--- a/style.css
+++ b/style.css
@@ -1,10 +1,11 @@
 body {
     background-color: black;
+    height: 100vh;
 }
 
 video {
     position: fixed;
-    top: 0%;
+    top: 0;
     width: 100%;
     opacity: 0.2;
 }
@@ -20,10 +21,13 @@ video {
 .navbar-brand {
     color: white;
     cursor: pointer;
+    width: 250px;
+    height: 50px;
 }
 
 .navbar-brand:hover {
     color: #441c1c;
+
 }
 
 .bg {
@@ -50,24 +54,20 @@ video {
 }
 
 .center {
-    padding: 10vh 0;
+    padding: 5vh 0;
 }
 
-.footer {
-    width: 100%;
-    height: 5%;
-    background: linear-gradient(#4b272700, #000000fe);
-    position: fixed;
-    bottom: 0;
-    text-align: center;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-}
-
-/* .btn-outline-light {
-    background: linear-gradient(#e6646446, #000000);
-} */
+/*.footer {*/
+/*    width: 100%;*/
+/*    height: 5%;*/
+/*    background: linear-gradient(#4b272700, #000000fe);*/
+/*    position: fixed;*/
+/*    bottom: 0;*/
+/*    text-align: center;*/
+/*    display: flex;*/
+/*    align-items: center;*/
+/*    justify-content: center;*/
+/*}*/
 
 .card {
     background-color: black;
@@ -76,22 +76,22 @@ video {
     --bs-card-border-color: none;
 }
 
-.footer-text {
-    color: white;
+/*.footer-text {*/
+/*    color: white;*/
 
-}
+/*}*/
 
 .forms {
     margin-top: 50px;
 }
 
-.form-floating>.form-control-plaintext::placeholder,
-.form-floating>.form-control::placeholder {
+.form-floating > .form-control-plaintext::placeholder,
+.form-floating > .form-control::placeholder {
     color: rgb(205, 204, 204);
 }
 
 
-.form-floating>.form-select {
+.form-floating > .form-select {
     padding-top: 9px;
 
 }
@@ -105,7 +105,7 @@ video {
 
 }
 
-.form-floating>.form-control:focus {
+.form-floating > .form-control:focus {
     background-color: #0000005f;
     color: white;
     padding-top: 9px;
@@ -119,7 +119,6 @@ video {
 }
 
 
-
 #floatingSelectGrid {
 
     height: 40px;
@@ -130,7 +129,6 @@ video {
     height: 40px;
 }
 
-
 .s {
     height: 40px;
     max-width: 80%;
@@ -139,13 +137,191 @@ video {
     display: block;
 }
 
-/* 
-@media screen and (min-width: 900px) {
-    .s {
-        padding: 1rem 3rem;
-    }
-} */
-
 .search-zone {
     margin-top: 5vh;
 }
+
+
+.footer-distributed {
+    background-color: black;
+    opasity: 1;
+    box-shadow: 0 1px 1px 0 rgba(0, 0, 0, 0.12);
+    box-sizing: border-box;
+    width: 100%;
+    text-align: left;
+    font: bold 16px sans-serif;
+    padding: 50px;
+    z-index: 1000;
+}
+
+.footer-distributed .footer-left,
+.footer-distributed .footer-center,
+.footer-distributed .footer-right {
+    display: inline-block;
+    vertical-align: top;
+}
+
+/* Footer left */
+
+.footer-distributed .footer-left {
+    width: 30%;
+}
+
+/* The company logo */
+
+.footer-distributed h3 {
+    color: #ffffff;
+    font: normal 36px, cursive;
+    margin: 0;
+}
+
+.footer-distributed h3 span {
+    color: lightseagreen;
+}
+
+/* Footer links */
+
+.footer-distributed .footer-links {
+    color: #ffffff;
+    margin: 20px 0 12px;
+    padding: 0;
+}
+
+.footer-distributed .footer-links a {
+    display: inline-block;
+    line-height: 1.8;
+    font-weight: 400;
+    text-decoration: none;
+    color: inherit;
+}
+
+.footer-distributed .footer-company-name {
+    color: #222;
+    font-size: 14px;
+    font-weight: normal;
+    margin: 0;
+}
+
+/* Footer Center */
+
+.footer-distributed .footer-center {
+    width: 35%;
+}
+
+.footer-distributed .footer-center i {
+    background-color: #33383b;
+    color: #ffffff;
+    font-size: 25px;
+    width: 38px;
+    height: 38px;
+    border-radius: 50%;
+    text-align: center;
+    line-height: 42px;
+    margin: 10px 15px;
+    vertical-align: middle;
+}
+
+.footer-distributed .footer-center i.fa-envelope {
+    font-size: 17px;
+    line-height: 38px;
+}
+
+.footer-distributed .footer-center p {
+    display: inline-block;
+    color: #ffffff;
+    font-weight: 400;
+    vertical-align: middle;
+    margin: 0;
+}
+
+.footer-distributed .footer-center p span {
+    display: block;
+    font-weight: normal;
+    font-size: 14px;
+    line-height: 2;
+}
+
+.footer-distributed .footer-center p a {
+    color: lightseagreen;
+    text-decoration: none;;
+}
+
+.footer-distributed .footer-links a:before {
+    content: "|";
+    font-weight: 300;
+    font-size: 20px;
+    left: 0;
+    color: #fff;
+    display: inline-block;
+    padding-right: 5px;
+}
+
+.footer-distributed .footer-links .link-1:before {
+    content: none;
+}
+
+/* Footer Right */
+
+.footer-distributed .footer-right {
+    width: 20%;
+}
+
+.footer-distributed .footer-company-about {
+    line-height: 20px;
+    color: #92999f;
+    font-size: 13px;
+    font-weight: normal;
+    margin: 0;
+}
+
+.footer-distributed .footer-company-about span {
+    display: block;
+    color: #ffffff;
+    font-size: 14px;
+    font-weight: bold;
+    margin-bottom: 20px;
+}
+
+.footer-distributed .footer-icons {
+    margin-top: 25px;
+}
+
+.footer-distributed .footer-icons a {
+    display: inline-block;
+    width: 35px;
+    height: 35px;
+    cursor: pointer;
+    background-color: #33383b;
+    border-radius: 2px;
+
+    font-size: 20px;
+    color: #ffffff;
+    text-align: center;
+    line-height: 35px;
+
+    margin-right: 3px;
+    margin-bottom: 5px;
+}
+
+/* If you don't want the footer to be responsive, remove these media queries */
+
+/*@media (max-width: 880px) {*/
+
+/*    .footer-distributed{*/
+/*        font: bold 14px sans-serif;*/
+/*    }*/
+
+/*    .footer-distributed .footer-left,*/
+/*    .footer-distributed .footer-center,*/
+/*    .footer-distributed .footer-right{*/
+/*        display: block;*/
+/*        width: 100%;*/
+/*        margin-bottom: 40px;*/
+/*        text-align: center;*/
+/*    }*/
+
+/*    .footer-distributed .footer-center i{*/
+/*        margin-left: 0;*/
+/*    }*/
+
+/*}*/
