--- a/style.css
+++ b/style.css
@@ -141,17 +141,16 @@ video {
     margin-top: 5vh;
 }
 
-
 .footer-distributed {
     background-color: black;
-    opasity: 1;
-    box-shadow: 0 1px 1px 0 rgba(0, 0, 0, 0.12);
+
+    /*box-shadow: 0 1px 1px 0 rgba(0, 0, 0, 0.12);*/
     box-sizing: border-box;
     width: 100%;
     text-align: left;
     font: bold 16px sans-serif;
     padding: 50px;
-    z-index: 1000;
+    /*z-index: 1000;*/
 }
 
 .footer-distributed .footer-left,
