--- a/styles/style.css
+++ b/styles/style.css
@@ -1,10 +1,11 @@
 body {
     background-color: black;
+    height: 100vh;
 }
 
 video {
     position: fixed;
-    top: 0%;
+    top: 0;
     width: 100%;
     opacity: 0.2;
 }
@@ -20,6 +21,8 @@ video {
 .navbar-brand {
     color: white;
     cursor: pointer;
+    width: 250px;
+    height: 50px;
 }
 
 .navbar-brand:hover {
@@ -53,21 +56,6 @@ video {
     padding: 10vh 0;
 }
 
-.footer {
-    width: 100%;
-    height: 5%;
-    background: linear-gradient(#4b272700, #000000fe);
-    position: fixed;
-    bottom: 0;
-    text-align: center;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-}
-
-/* .btn-outline-light {
-    background: linear-gradient(#e6646446, #000000);
-} */
 
 .card {
     background-color: black;
@@ -76,10 +64,6 @@ video {
     --bs-card-border-color: none;
 }
 
-.footer-text {
-    color: white;
-
-}
 
 .forms {
     margin-top: 50px;
@@ -139,12 +123,7 @@ video {
     display: block;
 }
 
-/* 
-@media screen and (min-width: 900px) {
-    .s {
-        padding: 1rem 3rem;
-    }
-} */
+
 
 .search-zone {
     margin-top: 5vh;
