--- a/styles/style.css
+++ b/styles/style.css
@@ -1,5 +1,6 @@
 body {
     background-color: black;
+    height: 100vh;
 }
 
 video {
@@ -20,6 +21,8 @@ video {
 .navbar-brand {
     color: white;
     cursor: pointer;
+    width: 250px;
+    height: 50px;
 }
 
 .navbar-brand:hover {
@@ -133,19 +136,149 @@ video {
 
 .s {
     height: 40px;
-    max-width: 80%;
-    z-index: 1000;
-    margin: 25px auto;
-    display: block;
+    /*max-width: 80%;*/
+    /*z-index: 1000;*/
+    margin: 12px 10px;
+    /*display: block;*/
 }
+.search,
+.reset {
+    cursor: pointer;
+    position: relative;
 
-/* 
-@media screen and (min-width: 900px) {
-    .s {
-        padding: 1rem 3rem;
-    }
-} */
+}
+/*.search:active,*/
+/*.reset:active {*/
+/*    background-color: transparent;*/
+/*}*/
+
 
 .search-zone {
     margin-top: 5vh;
 }
+.defText {
+    color: white;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    text-align: center;
+}
+
+.alert {
+    width: 100%;
+    background-color: transparent;
+    color: pink;
+    text-align: center;
+}
+
+.tryAgain {
+    width: 100%;
+    background-color: transparent;
+    color: pink;
+    text-align: center;
+    cursor: pointer;
+}
+
+.tryAgain:hover {
+    color: red;
+}
+
+
+/*try anim*/
+
+.container {
+    width: 100%;
+    margin: auto;
+    font-weight: 900;
+    text-align: center;
+    padding: 0 0 200px;
+}
+
+.animate {
+    font-size: 25px;
+    margin: 100px 0 0;
+
+}
+
+.animate span {
+    display: inline-block;
+}
+
+.animate span:nth-of-type(2) {
+    animation-delay: .05s;
+}
+.animate span:nth-of-type(3) {
+    animation-delay: .1s;
+}
+.animate span:nth-of-type(4) {
+    animation-delay: .15s;
+}
+.animate span:nth-of-type(5) {
+    animation-delay: .2s;
+}
+.animate span:nth-of-type(6) {
+    animation-delay: .25s;
+}
+.animate span:nth-of-type(7) {
+    animation-delay: .3s;
+}
+.animate span:nth-of-type(8) {
+    animation-delay: .35s;
+}
+.animate span:nth-of-type(9) {
+    animation-delay: .4s;
+}
+.animate span:nth-of-type(10) {
+    animation-delay: .45s;
+}
+.animate span:nth-of-type(11) {
+    animation-delay: .5s;
+}
+.animate span:nth-of-type(12) {
+    animation-delay: .55s;
+}
+.animate span:nth-of-type(13) {
+    animation-delay: .6s;
+}
+.animate span:nth-of-type(14) {
+    animation-delay: .65s;
+}
+.animate span:nth-of-type(15) {
+    animation-delay: .7s;
+}
+.animate span:nth-of-type(16) {
+    animation-delay: .75s;
+}
+.animate span:nth-of-type(17) {
+    animation-delay: .8s;
+}
+.animate span:nth-of-type(18) {
+    animation-delay: .85s;
+}
+.animate span:nth-of-type(19) {
+    animation-delay: .9s;
+}
+.animate span:nth-of-type(20) {
+    animation-delay: .95s;
+}
+
+.one span {
+    color: rgba(255, 255, 255, 0.82);
+    opacity: 0;
+    transform: translate(-150px, -50px) rotate(-180deg) scale(3);
+    animation: revolveScale .4s forwards;
+}
+
+@keyframes revolveScale {
+    60% {
+        transform: translate(20px, 20px) rotate(30deg) scale(.3);
+    }
+
+    100% {
+        transform: translate(0) rotate(0) scale(1);
+        opacity: 1;
+    }
+}
+
+
