--- a/styles/style.css
+++ b/styles/style.css
@@ -261,4 +261,17 @@ video {
     }
 }
 
+.div-buttons {
+    display: flex;
+    justify-content: space-around;
+    margin-top: 20px;
+}
 
+.card-body {
+    position: relative;
+}
+.btn-close {
+    position: absolute;
+    top: 5px;
+    right: 5px;
+}
