--- a/styles/style.css
+++ b/styles/style.css
@@ -135,10 +135,10 @@ video {
     position: relative;
 }
 
-<<<<<<< HEAD
+/*<<<<<<< HEAD*/
 
-=======
->>>>>>> 0736e64cc6b606515d0923e305310463d0a10cf9
+/*=======*/
+/*>>>>>>> 0736e64cc6b606515d0923e305310463d0a10cf9*/
 
 .search-zone {
     margin-top: 5vh;
